[project]
name = "http-test-lambda-common"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Cornwall"}
]
readme = "README.md"
requires-python = ">=3.12.8,<4.0.0"
dependencies = [
    "aws-lambda-powertools (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
